// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Track #render() changing current will move element 1`] = `
<CarouselTrack
  current={3}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() changing custom initial item to same dont change position 1`] = `
<CarouselTrack
  current={2}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() handle touch events event 1`] = `
<CarouselTrack
  current={0}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() moving to left will fire next event 1`] = `
<CarouselTrack
  current={0}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() moving to right will fire prev event 1`] = `
<CarouselTrack
  current={0}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() render with custom initial item 1`] = `
<CarouselTrack
  current={2}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() render with default props 1`] = `
<CarouselTrack
  current={0}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() small move wont fire prev event 1`] = `
<CarouselTrack
  current={0}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;

exports[`Carousel Track #render() wont move element if touch didnt start 1`] = `
<CarouselTrack
  current={0}
  onNext={[Function]}
  onPrev={[Function]}
>
  <div
    className="ui-swipe"
  />
</CarouselTrack>
`;
